fixed github holder error on small screens

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ margin-right:10%;
     text-align: center;
     font-family: 'Dancing Script', cursive;
 }
-
+cardGithub
 .links{
     text-align: center;
     margin-top:1rem;
@@ -383,6 +383,7 @@ border-radius: 90%;
     text-align: center;
     font-size:1.2rem;
  }
+ /*ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss*/
  .cardGithub{
      display: flex;
      justify-content: space-around;   
@@ -394,10 +395,22 @@ border-radius: 90%;
      align-items: center;
      box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), -1px -1px 5px rgba(0, 0, 0, 0.2);
      border-radius: 10px;
+    
  }
+ 
  .carGitHubLogo{
      width: 50px;
  }
+ @media  screen and (max-width:450px) {
+    .cardGithub{
+        justify-content: space-between;
+    }
+    .carGitHubLogo{
+        width: 40px;
+    }
+    
+    
+}
  .clone{
      margin:0 1rem;
  }
@@ -468,4 +481,8 @@ navbar-links
 }
 .card2{
     cursor: pointer;
+}
+.container a{
+    text-decoration: none;
+    color: black;
 }
